--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">WHO WE ARE</span></a>
                         <div class="dropdown-items-divide-hr"></div>
-                        <a class="dropdown-item" href="privacy-policy.html"><span class="item-text">PRIVACY POLICY</span></a>
+                        
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
@@ -383,7 +383,7 @@
                             <p class="price">Starting at <span>Free</span></p>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="#callMe">DETAILS</a>
+                            <a class="btn-solid-reg page-scroll" href="#callMe">Register</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -409,7 +409,7 @@
                             <p class="price">Starting at <span>Free</span></p>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="#callMe">DETAILS</a>
+                            <a class="btn-solid-reg page-scroll" href="#details">Details</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -435,7 +435,7 @@
                             <p class="price">Starting at <span>Free</span></p>
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="#callMe">DETAILS</a>
+                            <a class="btn-solid-reg page-scroll" href="#intro">Details</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -583,8 +583,8 @@
 
                     <!-- Tab -->
                     <div class="tab-pane fade" id="tab-3" role="tabpanel" aria-labelledby="tab-3">
-                        <p><strong>We strive to achieve</strong> 100% customer satisfaction for both types of customers:  event organizers and competitors. Types of customers: <a class="green" href="#your-link">with huge potential</a></p>
-                        <p><strong>Our goal is to help</strong> your event achieve its full potential and establish long term stability for <a class="green" href="#your-link">the stakeholders</a></p>
+                        <p><strong>We strive to achieve</strong> 100% customer satisfaction for both types of customers:  event organizers and competitors. Types of customers: with huge potential</p>
+                        <p><strong>Our goal is to help</strong> your event achieve its full potential and establish long term stability for the stakeholders</p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
