--- a/index.html
+++ b/index.html
@@ -395,16 +395,16 @@
                             <img class="img-fluid" src="images/services-2.jpg" alt="alternative">
                         </div>
                         <div class="card-body">
-                            <h3 class="card-title">Advertisments</h3>
-                            <p>We give chance to display advertisments of  enviroment protecting events organized by any volunteer</p>
+                            <h3 class="card-title">Advertisements</h3>
+                            <p>We give chance to display advertisements of  environment protecting events organized by any volunteer</p>
                             <ul class="list-unstyled li-space-lg">
                                 <li class="media">
                                     <i class="fas fa-square"></i>
-                                    <div class="media-body">Display Advertisments</div>
+                                    <div class="media-body">Display Advertisements</div>
                                 </li>
                                 <li class="media">
                                     <i class="fas fa-square"></i>
-                                    <div class="media-body">Pramote Advertisments</div>
+                                    <div class="media-body">Promote Advertisements</div>
                                 </li>
                             </ul>
                             <p class="price">Starting at <span>Free</span></p>
@@ -422,7 +422,7 @@
                         </div>
                         <div class="card-body">
                             <h3 class="card-title">More Informations</h3>
-                            <p>In our truegreeners website you can get more inbformations about global warming</p>
+                            <p>In our truegreeners website you can get more informations about global warming</p>
                             <ul class="list-unstyled li-space-lg">
                                 <li class="media">
                                     <i class="fas fa-square"></i>
@@ -455,16 +455,16 @@
             
             <!-- Accordion -->
             <div class="accordion-container" id="accordionOne">
-                <h2>Advertisments Of Enviromental Protecting Events</h2>
+                <h2>Advertisements Of Environmental Protecting Events</h2>
                 <div class="item">
                     <div id="headingOne">
                         <span data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" role="button">
-                            <span class="circle-numbering">1</span><span class="accordion-title">How Can Help Your Enviromental protecting Events</span>
+                            <span class="circle-numbering">1</span><span class="accordion-title">How Can Help Your Environmental protecting Events</span>
                         </span>
                     </div>
                     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionOne">
                         <div class="accordion-body">
-                            At our TrueGreeners website we hope to help display advertisements of enviromental protecting events 
+                            At our TrueGreeners website we hope to help display advertisements of environmental protecting events 
                         </div>
                     </div>
                 </div> <!-- end of item -->
@@ -642,7 +642,7 @@
                                     <div class="card">
                                         <img class="card-image" src="images/testimonial-1.jpg" alt="alternative">
                                         <div class="card-body">
-                                            <div class="testimonial-text">The guys from TrueGreeners helped with getting my event more successfull from their pramoting.</div>
+                                            <div class="testimonial-text">The guys from TrueGreeners helped with getting my event more successfull from their promoting.</div>
                                             <div class="testimonial-author">Nethmi Warnakula - BCS Undergraduate University of Ruhuna</div>
                                         </div>
                                     </div>
@@ -654,7 +654,7 @@
                                     <div class="card">
                                         <img class="card-image" src="images/testimonial-2.jpg" alt="alternative">
                                         <div class="card-body">
-                                            <div class="testimonial-text">I purchased the Growth Accelerator service pack from TrueGreeners.I hope to give all my events promting each year </div>
+                                            <div class="testimonial-text">I purchased the Growth Accelerator service pack from TrueGreeners.I hope to give all my events promoting each year </div>
                                             <div class="testimonial-author">Sudesh Wijesinghe - BCS Undergraduate University of Ruhuna</div>
                                         </div>
                                     </div>        
@@ -678,7 +678,7 @@
                                     <div class="card">
                                         <img class="card-image" src="images/testimonial-4.jpg" alt="alternative">
                                         <div class="card-body">
-                                            <div class="testimonial-text">I interest truegreeners because i want to display advertisment about my event.</div>
+                                            <div class="testimonial-text">I interest truegreeners because i want to display advertisement about my event.</div>
                                             <div class="testimonial-author">Rakitha Dananjan-Software Engineering Undergraduate IIT</div>
                                         </div>
                                     </div>
@@ -690,7 +690,7 @@
                                     <div class="card">
                                         <img class="card-image" src="images/testimonial-5.jpg" alt="alternative">
                                         <div class="card-body">
-                                            <div class="testimonial-text">I recommended Truegreeners because I got informations about Global warmiung and how reduce it.</div>
+                                            <div class="testimonial-text">I recommended Truegreeners because I got informations about Global Warmiung and how reduce it.</div>
                                             <div class="testimonial-author">Imalsha Ranepura-BCS Undergraduate University of Ruhuna </div>
                                         </div>
                                     </div>        
@@ -1167,7 +1167,7 @@
                     <div class="text-container">
                         <div class="section-title">ABOUT</div>
                         <h2>We are Passionate About Reducing Global Warming</h2>
-                        <p>Our goal is to provide the informations about the global warming, reducing global warming and to create a safe enviroment for every living beings.   </p>
+                        <p>Our goal is to provide the informations about the global warming, reducing global warming and to create a safe environment for every living beings.   </p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
@@ -1264,7 +1264,7 @@
             <div class="col-md-6">
                 <div class="text-container about">
                     <h4>Few Words About TrueGreeners</h4>
-                    <p class="white">We're passionate about delivering more informations about Global Warming and how to reduce it.Not only that we help anyone who want to oganize any environmental protecting event as a good pramoter.Then join with us.</p>
+                    <p class="white">We're passionate about delivering more informations about Global Warming and how to reduce it.Not only that we help anyone who want to oganize any environmental protecting event as a good promoter.Then join with us.</p>
                 </div> <!-- end of text-container -->
             </div> <!-- end of col -->
             <div class="col-md-2">
